deploy/components/inference-gateway/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${EPP_NAME}
spec:
  selector:
    app: ${EPP_NAME}
  ports:
  - protocol: TCP
    port: 9002
    targetPort: 9002
    appProtocol: http2
  type: ClusterIP
